tests/Front/ValidPrograms/56_ArrayAsParam.c
#include <stdint.h>

int32_t function(int32_t a[], int32_t n) {
   int32_t i = a[i];
   return result;
}
   
void main() {
   int32_t a[10];
   int32_t i;
   int32_t r;
   r = function(a,10);
}
