tests/Front/SemanticError/03_FunctionParametersWithSameName.c
void main(int32_t a, int64_t a) {
    a = 1;
}
